# ainir

./: .gitattributes  .gitignore  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  START_HERE.md  golden_traces.yaml  negative_conformance_corpus.yaml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.lock.txt  requirements.txt
docs/: README.md  architecture.md  ci_supply_chain_hardening.md  cross_platform_output_paths.md  demo_expected_output.md  effect_contracts_and_semantic_roles.md  effect_taxonomy_and_canonical_effects.md  evidence_ledger.md  evidence_provider_interface.md  executable_claim_semantics.md  execution_context.md  external_consumer_profiles.md  future_external_consumer_slots.md  github_launch_checklist.md  github_repo_settings.md  golden_traces.md  index.md  lowering_gate.md  manifesto.md  negative_conformance_corpus.md  operation_spec_registry.md  phase13_release_candidate_reassessment.md  phase14_operation_contract_and_runner_stabilization.md  phase15_capability_and_host_enforcement.md  phase16_exact_capability_contracts.md  phase17_final_defensive_conformance_review.md  phase18_trust_gate_surface.md  phase19_trust_receipt_persistence.md  phase20_trust_receipt_conformance.md  phase21_launch_readiness.md  phase22_verified_intent_export_surface.md  phase23_verified_intent_export_hardening.md  phase24_verified_intent_packet_semantic_hardening.md  phase25_verified_intent_contract_strictness.md  phase26_private_github_trial.md  positioning_and_scope.md  pre_v1_status.md  prelaunch_check.md  (+26 more)
(+111 files in other folders)
