[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ainir-public-demo"
version = "0.1.0"
description = "AiNIR v1.0 RC candidate public demo: inspecting AI-generated program semantics before lowering or execution."
readme = "README.md"
authors = [{name = "Lee Yoon Kyu"}]
maintainers = [{name = "Lee Yoon Kyu"}]
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = ["PyYAML>=6"]

[project.scripts]
ainir = "ainir.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ainir = ["registries/*.yaml"]

[project.optional-dependencies]
dev = ["pytest>=8"]
